# docs/swagger.yaml
@@ -122,6 +122,20 @@ paths:
       - application/json
       responses: {}
       summary: Get item by id
+  /items/filters:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: Get item filters
   /listings:
     get:
       parameters:
