# routers/api/item.go
@@ -1,21 +1,23 @@
 package api
 
 import (
-	"log"
 	"net/http"
-	"runtime"
 
 	"github.com/gin-gonic/gin"
 	"github.com/mikezzb/steam-trading-server/app"
 	"github.com/mikezzb/steam-trading-server/e"
 	"github.com/mikezzb/steam-trading-server/pkg/setting"
 	"github.com/mikezzb/steam-trading-server/services"
+	"github.com/mikezzb/steam-trading-server/types"
 	"github.com/mikezzb/steam-trading-server/util"
 )
 
 // @Summary Get items
 // @Produce json
 // @Param page query int true "Page"
+// @Param exterior query string false "Exteriors"
+// @Param category query string false "Category"
+// @Param skin query string false "Skin"
 // @Router /items [get]
 func GetItems(c *gin.Context) {
 	appG := app.Gin{C: c}
@@ -24,11 +26,9 @@ func GetItems(c *gin.Context) {
 		PageNum: util.GetPage(c),
 	}
 
-	log.Printf("GetItems: %d", itemService.PageNum)
+	itemFilters := types.NewItemFilters(c.Request.URL.Query())
 
-	items, err := itemService.GetItems(setting.App.ItemPageSize)
-
-	runtime.Gosched()
+	items, err := itemService.GetItems(setting.App.ItemPageSize, itemFilters.GetBsonFilters())
 
 	if err != nil {
 		appG.Error(http.StatusInternalServerError, e.SERVER_ERROR, err)
@@ -66,5 +66,26 @@ func GetItem(c *gin.Context) {
 
 	data := make(map[string]interface{})
 	data["item"] = item
+	appG.Response(http.StatusOK, e.SUCCESS, data)
+}
+
+// @Summary Get item filters
+// @Produce json
+// @Router /items/filters [get]
+// @Success 200 {object} app.Response
+// @Failure 500 {object} app.Response
+func GetItemsFilters(c *gin.Context) {
+	appG := app.Gin{C: c}
+
+	itemService := services.Item{}
+	filters, err := itemService.GetItemFilters()
+
+	if err != nil {
+		appG.Error(http.StatusInternalServerError, e.SERVER_ERROR, err)
+		return
+	}
+
+	data := make(map[string]interface{})
+	data["filters"] = filters
 	appG.Response(http.StatusOK, e.SUCCESS, data)
 }
